# homenet_hna

./: .gitignore  COPYRIGHT  Makefile.am  README  README_BUILD  configure  configure.ac
lib/: Makefile.am  knot_helpers.c  knot_helpers.cpp  knot_helpers.h  ldns_helpers.c  ldns_helpers.cpp  ldns_helpers.h  libhna.pc  licence_workqueue.txt  ssl_helpers.c  ssl_helpers.cpp  ssl_helpers.h  ssl_session.c  ssl_session.cpp  ssl_session.h  workqueue.cpp
lib/includes/: knot_helpers.h  ssl_helpers.h
src/: Makefile.am  config_a600b572b05714cd30c120d5318b1b3625e15917.json  config_e670d391d2a61edf9436a94a9ed6691fc7cd273d.json  daniel.homenetdns.com.config  dm_worker.cpp  dm_worker.h  homenet_dm  homenet_dm.cpp  homenet_dm.h  homenet_dm_sock.cpp  homenet_hna  homenet_hna.cpp  homenet_hna.h  homenet_hna_client_config.json  homenet_hna_client_config.json.safe  libevent_dm.cpp  sub.homenetdns.com.config  sub2.homenetdns.com.config
src-dm/: Makefile.am  client.h  common.h  dm_worker.c  dm_worker.h  dnsovertls.c  dnsovertls.h  homenet_dm.c  homenet_dm.h  libevent-cb.h  libevent_dm.c  server-ssl.c  server.c  server.crt  server.key  ssl_client.h  util.c  util.h
src-hna/: Makefile.am  hna_cert.pem  homenet_hna.c  homenet_hna.h  homenet_hna_client_config.json  homenet_hna_server_config.json
src/knot-scripts/: make-knot-slave-config.bash  make_knot_config.bash  make_knot_dm_config.bash  make_knot_ds.bash  make_knot_slave_config.bash  make_new_ds.bash  make_new_ns.bash
tests/: Makefile.am  ldns_helpers_test.cpp  ldns_helpers_test.h  main  main.c  sample_test  sample_test.cpp
tests/dm/: README.txt  config_6e53190455ece424aba235fb71a303b503aca8ca.json  daniel.homenetdns.com.csr  daniel.homenetdns.com.key  daniel.homenetdns.com.pem  dm1.homenetdns.com.pem  fullchain.pem  fwd.subzone.homenetdns.com.db  fwd.subzone.homenetdns.com.db.corrupted  homenetdnsCA.key  homenetdnsCA.pem  homenetdnsCA.srl  key.pem  make_ca.bash  make_hna_config.pl  make_server_cert.bash  make_zone_cert.bash  openssl.conf  sub.homenetdns.com.csr  sub.homenetdns.com.key  sub.homenetdns.com.pem  sub2.csr  sub2.homenetdns.com.csr  sub2.homenetdns.com.key  sub2.homenetdns.com.pem  sub2.key  sub2.pem  test.homenetdns.com.csr  test.homenetdns.com.key  test.homenetdns.com.pem
tests/testdata/: cabundle.pem  cert.pem  fullchain.pem  fwd.homenetdns.com.db  key.pem  privkey.pem
