AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = $(ACLOCAL_FLAGS)
AM_CFLAGS = -fPIC -Wall -Wextra
AM_CFLAGS += -I/usr/local/include
AM_LDFLAGS = -L/usr/local/lib -L.
bin_PROGRAMS = server serverssl libevent_dm homenet_dm
server_SOURCES = server.c workqueue.c
serverssl_SOURCES = server-ssl.c workqueue.c util.c 
serverssl_LDADD = $(top_builddir)/lib/libhna.la -lssl -lcrypto
libevent_dm_SOURCES = libevent_dm.c dm_worker.c util.c
libevent_dm_LDADD = $(top_builddir)/lib/libhna.la -lssl -lcrypto
libevent_dm_CFLAGS= -DWITH_SSL $(AM_CFLAGS)
homenet_dm_SOURCES = homenet_dm.c workqueue.c dm_worker.c util.c dnsovertls.c
homenet_dm_LDADD = $(top_builddir)/lib/libhna.la -lssl -lcrypto
homenet_dm_CFLAGS= -DWITH_SSL -DWITH_DNSOVERTLS $(AM_CFLAGS)
